<resources>
    <string name="app_name">Pokedex</string>

    //Login_activity
    <string name="login_title">POKEDEX</string>
    <string name="login_caption">Pokemon trainer username</string>
    <string name="holder_username">Username</string>
    <string name="login_btn">LOGIN</string>

    //Home
    <string name="watch_btn">Watch</string>
    <string name="Catch_btn">Catch</string>
    <string name="home_title">My pokemons</string>
    <string name="holder_search">Search</string>
    <string name="holder_catch">Name or number: pikachu, charizard, 36, 179</string>

    //Statistics
    <string name="drop_btn">Drop</string>
    <string name="default_name">Unknown</string>
    <string name="default_type">(Type)</string>
    <string name="default_skill">0</string>
    <string name="default_date">April 4th, 2022</string>
    <string name="skill_defense">Defense</string>
    <string name="skill_attack">Attack</string>
    <string name="skill_speed">Speed</string>
    <string name="skill_life">Life</string>

    //Alerts
    <string name="not_founded">Pokemon not founded</string>
    <string name="alert_exit">want to leave Pokedex?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    //Error messages
    <string name="pokemons_error">Error loading pokemons</string>
    <string name="img_fetch_error">Image fetch error</string>
    <string name="upload_error">Can not upload pokemon. Check internet connection</string>
    <string name="delete_error">Can not delete pokemon. Check internet connection</string>
</resources>